syntax = "proto3";

package holidays;

service HolidaysService {
    rpc holidaysByYear (Date) returns (HolidaysResponse) {}
    rpc holidaysByMonth (Date) returns (HolidaysResponse) {}
    rpc isColombianHoliday (Date) returns (IsHoliday) {}
}

message Date {
    string date = 1;
}

message Holiday {
    string name = 1;
    int32 day = 2;
    int32 month = 3;
}

message HolidaysResponse {
  repeated Holiday holidays = 1;
}

message IsHoliday {
    bool isholiday = 1;
}